# codaic.venturestrat

./: .gitignore  venturestrat-config.yaml
output/services/event-monitor/: Dockerfile  README.md  manifest.yaml  pyproject.toml
output/services/event-monitor/src/event_monitor/: __init__.py  __main__.py  config.py  health.py  main.py  models.py  observer.py  router.py  topology.py  writer.py
output/services/event-monitor/tests/: __init__.py  conftest.py
output/services/event-monitor/tests/integration/: __init__.py  test_service.py
output/services/event-monitor/tests/unit/: __init__.py  test_health.py
output/services/forge/: Dockerfile  pyproject.toml
output/services/forge/src/forge_service/: __init__.py  adw_executor.py  config.py  main.py  models.py  repository.py  requirement_service.py  schemas.py  spec_generator.py  sse_manager.py
output/services/outreach-service/: .env.example  Dockerfile  README.md  docker-compose.dev.yaml  email_account.proto  email_template.proto  lifecycle_email.proto  manifest.yaml  message.proto  pyproject.toml
output/services/outreach-service/entities/: lifecycle_email.yaml
output/services/outreach-service/frontend/: .env  .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
output/services/outreach-service/frontend/src/: App.tsx  index.css  main.tsx  router.tsx  theme.ts
output/services/outreach-service/migrations/: 001_initial_schema.sql  __init__.py
output/services/outreach-service/schemas/: __init__.py
output/services/outreach-service/src/outreach_service/: __main__.py  config.py  health.py  main.py  models.py
output/services/outreach-service/tests/: __init__.py  conftest.py
output/services/outreach-service/tests/integration/: __init__.py  test_email_send_integration.py  test_lifecycle_email_integration.py  test_service.py
output/services/outreach-service/tests/unit/: __init__.py  test_api.py  test_health.py  test_models.py
output/services/registry-service/: .ruffignore  BASEMODEL_CONVERSION_STATUS.md  CONVERSION_COMPLETE.md  DOCKER_STARTUP.md  Dockerfile  MIGRATION_README.md  README.md  STARTUP_GUIDE.md  START_SERVICE.sh  TEST_BASEMODEL_CONVERSION.sh  ZERO_DOWNTIME_MIGRATION.md  alembic.ini  docker-compose.dev.yaml  docker-compose.dev.yaml.original  manifest.yaml  migration_strategy.md  mutmut_config.py  pyproject.toml  pytest.ini  setup.cfg  test_imports_simple.py  test_migration_setup.py  test_quota_hooks_integration.py
output/services/registry-service/.epic_runner/: config.yml
output/services/registry-service/charts/registry-service/: Chart.yaml  values.yaml
output/services/registry-service/examples/example-service/: README.md  main.py  manifest.yaml
output/services/registry-service/migrations/: env.py
output/services/registry-service/migrations/versions/: 5e44b0f01a4c_initial_schema_with_all_tenant_fields.py
output/services/registry-service/protos/: registry.proto  tenant.proto  tenant_service.proto
output/services/registry-service/schemas/: manifest-v1.0.0.json
output/services/registry-service/scripts/: demo_migration_test.py  migrate.py  test_migration_sample_data.py
output/services/registry-service/sdk/: README.md  pyproject.toml
output/services/registry-service/sdk/tests/: __init__.py  test_client.py  test_gateway_integration.py
output/services/registry-service/sdk/typescript/: registry.ts
output/services/registry-service/sdk/venturestrat_registry/: __init__.py  client.py  manifest.py
output/services/registry-service/sdk/venturestrat_registry_service/: README.md  __init__.py  async_client.py  auth.py  client.py  config.py  exceptions.py  models.py  pyproject.toml  utils.py
output/services/registry-service/services/registry-service/: MIGRATION_README.md  test_quota_429_simple.py
output/services/registry-service/src/: tenant_pb2.py  tenant_pb2_grpc.py
output/services/registry-service/src/registry/: __init__.py  config.py  consul_client.py  db_models.py  db_session.py  events.py  export_service.py  grpc_server.py  health.py  health_monitor.py  keycloak_client.py  main.py  manifest.py  migration_service.py  registry_models.py  server.py  service.py  tenant_purge_scheduler.py  tenant_service.py  version.py
output/services/registry-service/test_data/: README.md
output/services/registry-service/test_data/curves/: eur_euribor.json  gbp_sonia.json  tenant_a_usd_sofr.json  tenant_b_usd_sofr.json  tenant_c_usd_sofr.json
output/services/registry-service/test_data/instruments/: eur_10y_vanilla_swap.json  eur_cap_floor_3y.json  eur_corporate_bond_3y.json  eurusd_forward_1y.json  gbpusd_option_6m.json  usd_5y_vanilla_swap.json  usd_swaption_5y_into_5y.json  usd_treasury_5y.json
output/services/registry-service/test_data/portfolios/: large_portfolio_1000.json  medium_portfolio_500.json  small_portfolio_100.json  stress_portfolio_2500.json
output/services/registry-service/tests/: __init__.py  conftest.py  test_migration_integration.py  test_migration_sample_data.py  test_migration_service.py  test_migrations.py
output/services/registry-service/tests/fixtures/: __init__.py
output/services/registry-service/tests/integration/: __init__.py  test_capability_query_integration.py  test_e2e.py  test_e2e_export.py  test_e2e_quota.py  test_e2e_tenant_lifecycle.py  test_export_api.py  test_infrastructure.py  test_metrics_integration.py  test_observability_integration.py  test_pricing_infrastructure_schema.py  test_quota_enforcement_429_responses.py  test_quota_middleware_integration.py  test_redis_quota_counters.py  test_tenant_context_integration.py  test_tenant_grpc_integration.py  test_tenant_grpc_server_lifecycle.py
output/services/registry-service/tests/unit/: __init__.py  test_advanced_routing.py  test_api.py  test_consul_client.py  test_events.py  test_export_service.py  test_grpc_service.py  test_health.py  test_health_endpoints.py  test_health_monitor.py  test_keycloak_client.py  test_manifest.py  test_models.py  test_observability_assertions.py  test_observability_integration.py  test_plugin_interface.py  test_pricer_capability_model.py  (+27 more)
(+1376 files in other folders)
