[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "venturestrat-forge-service"
version = "1.0.0"
description = "VentureStrat Forge — Requirements & ADW execution service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "redis>=5.0.0",
  "sse-starlette>=1.6.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.25.0",
  "alembic>=1.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]
